parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> external_declaration
Rule 2     program -> program external_declaration
Rule 3     external_declaration -> declaration
Rule 4     external_declaration -> EXTERN declaration
Rule 5     external_declaration -> function_definition
Rule 6     function_definition -> type function_declarator decl_glbl_fct compound_instruction
Rule 7     decl_glbl_fct -> <empty>
Rule 8     declaration -> type declarator_list SEMICOLON
Rule 9     type -> INT
Rule 10    type -> STRING
Rule 11    declarator_list -> declarator
Rule 12    declarator_list -> declarator_list COMMA declarator
Rule 13    declaration_list -> declaration
Rule 14    declaration_list -> declaration_list declaration
Rule 15    declarator -> IDENT
Rule 16    declarator -> function_declarator
Rule 17    function_declarator -> IDENT LPARENS RPARENS
Rule 18    function_declarator -> IDENT LPARENS parameter_list RPARENS
Rule 19    parameter_list -> parameter_declaration
Rule 20    parameter_list -> parameter_list COMMA parameter_declaration
Rule 21    parameter_declaration -> type IDENT
Rule 22    instruction -> SEMICOLON
Rule 23    instruction -> compound_instruction
Rule 24    instruction -> expression_instruction
Rule 25    instruction -> iteration_instruction
Rule 26    instruction -> select_instruction
Rule 27    instruction -> jump_instruction
Rule 28    expression_instruction -> expression SEMICOLON
Rule 29    expression_instruction -> assignment SEMICOLON
Rule 30    assignment -> IDENT ASSIGNMENT expression
Rule 31    compound_instruction -> block_start declaration_list instruction_list block_end
Rule 32    compound_instruction -> block_start declaration_list block_end
Rule 33    compound_instruction -> block_start instruction_list block_end
Rule 34    compound_instruction -> block_start block_end
Rule 35    block_start -> LBRACKET
Rule 36    block_end -> RBRACKET
Rule 37    instruction_list -> instruction
Rule 38    instruction_list -> instruction_list instruction
Rule 39    select_instruction -> cond_instruction instruction
Rule 40    select_instruction -> cond_instruction instruction ELSE instruction
Rule 41    cond_instruction -> IF LPARENS condition RPARENS
Rule 42    iteration_instruction -> WHILE LPARENS condition RPARENS instruction
Rule 43    iteration_instruction -> DO instruction WHILE LPARENS condition RPARENS
Rule 44    iteration_instruction -> FOR LPARENS assignment SEMICOLON condition SEMICOLON assignment RPARENS instruction
Rule 45    jump_instruction -> RETURN expression SEMICOLON
Rule 46    condition -> expression comparison_operator expression
Rule 47    comparison_operator -> EQUAL
Rule 48    comparison_operator -> NOTEQUAL
Rule 49    comparison_operator -> LESS
Rule 50    comparison_operator -> GREATER
Rule 51    comparison_operator -> LESSEQUAL
Rule 52    comparison_operator -> GREATEREQUAL
Rule 53    expression -> expression_additive
Rule 54    expression -> expression SHIFTLEFT expression_additive
Rule 55    expression -> expression SHIFTRIGHT expression_additive
Rule 56    expression_additive -> expression_multiplicative
Rule 57    expression_additive -> expression_additive ADD expression_multiplicative
Rule 58    expression_additive -> expression_additive SUBTRACT expression_multiplicative
Rule 59    expression_multiplicative -> unary_expression
Rule 60    expression_multiplicative -> expression_multiplicative MULTIPLY unary_expression
Rule 61    expression_multiplicative -> expression_multiplicative DIVIDE unary_expression
Rule 62    expression_multiplicative -> expression_multiplicative MODULO unary_expression
Rule 63    unary_expression -> postfix_expression
Rule 64    unary_expression -> SUBTRACT unary_expression
Rule 65    postfix_expression -> primary_expression
Rule 66    postfix_expression -> IDENT LPARENS argument_expression_list RPARENS
Rule 67    postfix_expression -> IDENT LPARENS RPARENS
Rule 68    argument_expression_list -> expression
Rule 69    argument_expression_list -> argument_expression_list COMMA expression
Rule 70    primary_expression -> IDENT
Rule 71    primary_expression -> CONST_INT
Rule 72    primary_expression -> CONST_STRING
Rule 73    primary_expression -> LPARENS expression RPARENS

Terminals, with rules where they appear

ADD                  : 57
ASSIGNMENT           : 30
COMMA                : 12 20 69
CONST_INT            : 71
CONST_STRING         : 72
DIVIDE               : 61
DO                   : 43
ELSE                 : 40
EQUAL                : 47
EXTERN               : 4
FOR                  : 44
GREATER              : 50
GREATEREQUAL         : 52
IDENT                : 15 17 18 21 30 66 67 70
IF                   : 41
INT                  : 9
LBRACKET             : 35
LESS                 : 49
LESSEQUAL            : 51
LPARENS              : 17 18 41 42 43 44 66 67 73
MODULO               : 62
MULTIPLY             : 60
NOTEQUAL             : 48
RBRACKET             : 36
RETURN               : 45
RPARENS              : 17 18 41 42 43 44 66 67 73
SEMICOLON            : 8 22 28 29 44 44 45
SHIFTLEFT            : 54
SHIFTRIGHT           : 55
STRING               : 10
SUBTRACT             : 58 64
WHILE                : 42 43
error                : 

Nonterminals, with rules where they appear

argument_expression_list : 66 69
assignment           : 29 44 44
block_end            : 31 32 33 34
block_start          : 31 32 33 34
comparison_operator  : 46
compound_instruction : 6 23
cond_instruction     : 39 40
condition            : 41 42 43 44
decl_glbl_fct        : 6
declaration          : 3 4 13 14
declaration_list     : 14 31 32
declarator           : 11 12
declarator_list      : 8 12
expression           : 28 30 45 46 46 54 55 68 69 73
expression_additive  : 53 54 55 57 58
expression_instruction : 24
expression_multiplicative : 56 57 58 60 61 62
external_declaration : 1 2
function_declarator  : 6 16
function_definition  : 5
instruction          : 37 38 39 40 40 42 43 44
instruction_list     : 31 33 38
iteration_instruction : 25
jump_instruction     : 27
parameter_declaration : 19 20
parameter_list       : 18 20
postfix_expression   : 63
primary_expression   : 65
program              : 2 0
select_instruction   : 26
type                 : 6 8 21
unary_expression     : 59 60 61 62 64

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . external_declaration
    (2) program -> . program external_declaration
    (3) external_declaration -> . declaration
    (4) external_declaration -> . EXTERN declaration
    (5) external_declaration -> . function_definition
    (8) declaration -> . type declarator_list SEMICOLON
    (6) function_definition -> . type function_declarator decl_glbl_fct compound_instruction
    (9) type -> . INT
    (10) type -> . STRING

    EXTERN          shift and go to state 6
    INT             shift and go to state 1
    STRING          shift and go to state 2

    declaration                    shift and go to state 5
    external_declaration           shift and go to state 4
    type                           shift and go to state 7
    function_definition            shift and go to state 8
    program                        shift and go to state 3

state 1

    (9) type -> INT .

    IDENT           reduce using rule 9 (type -> INT .)


state 2

    (10) type -> STRING .

    IDENT           reduce using rule 10 (type -> STRING .)


state 3

    (0) S' -> program .
    (2) program -> program . external_declaration
    (3) external_declaration -> . declaration
    (4) external_declaration -> . EXTERN declaration
    (5) external_declaration -> . function_definition
    (8) declaration -> . type declarator_list SEMICOLON
    (6) function_definition -> . type function_declarator decl_glbl_fct compound_instruction
    (9) type -> . INT
    (10) type -> . STRING

    EXTERN          shift and go to state 6
    INT             shift and go to state 1
    STRING          shift and go to state 2

    declaration                    shift and go to state 5
    external_declaration           shift and go to state 9
    type                           shift and go to state 7
    function_definition            shift and go to state 8

state 4

    (1) program -> external_declaration .

    EXTERN          reduce using rule 1 (program -> external_declaration .)
    INT             reduce using rule 1 (program -> external_declaration .)
    STRING          reduce using rule 1 (program -> external_declaration .)
    $end            reduce using rule 1 (program -> external_declaration .)


state 5

    (3) external_declaration -> declaration .

    EXTERN          reduce using rule 3 (external_declaration -> declaration .)
    INT             reduce using rule 3 (external_declaration -> declaration .)
    STRING          reduce using rule 3 (external_declaration -> declaration .)
    $end            reduce using rule 3 (external_declaration -> declaration .)


state 6

    (4) external_declaration -> EXTERN . declaration
    (8) declaration -> . type declarator_list SEMICOLON
    (9) type -> . INT
    (10) type -> . STRING

    INT             shift and go to state 1
    STRING          shift and go to state 2

    type                           shift and go to state 11
    declaration                    shift and go to state 10

state 7

    (8) declaration -> type . declarator_list SEMICOLON
    (6) function_definition -> type . function_declarator decl_glbl_fct compound_instruction
    (11) declarator_list -> . declarator
    (12) declarator_list -> . declarator_list COMMA declarator
    (17) function_declarator -> . IDENT LPARENS RPARENS
    (18) function_declarator -> . IDENT LPARENS parameter_list RPARENS
    (15) declarator -> . IDENT
    (16) declarator -> . function_declarator

    IDENT           shift and go to state 15

    declarator                     shift and go to state 13
    declarator_list                shift and go to state 12
    function_declarator            shift and go to state 14

state 8

    (5) external_declaration -> function_definition .

    EXTERN          reduce using rule 5 (external_declaration -> function_definition .)
    INT             reduce using rule 5 (external_declaration -> function_definition .)
    STRING          reduce using rule 5 (external_declaration -> function_definition .)
    $end            reduce using rule 5 (external_declaration -> function_definition .)


state 9

    (2) program -> program external_declaration .

    EXTERN          reduce using rule 2 (program -> program external_declaration .)
    INT             reduce using rule 2 (program -> program external_declaration .)
    STRING          reduce using rule 2 (program -> program external_declaration .)
    $end            reduce using rule 2 (program -> program external_declaration .)


state 10

    (4) external_declaration -> EXTERN declaration .

    EXTERN          reduce using rule 4 (external_declaration -> EXTERN declaration .)
    INT             reduce using rule 4 (external_declaration -> EXTERN declaration .)
    STRING          reduce using rule 4 (external_declaration -> EXTERN declaration .)
    $end            reduce using rule 4 (external_declaration -> EXTERN declaration .)


state 11

    (8) declaration -> type . declarator_list SEMICOLON
    (11) declarator_list -> . declarator
    (12) declarator_list -> . declarator_list COMMA declarator
    (15) declarator -> . IDENT
    (16) declarator -> . function_declarator
    (17) function_declarator -> . IDENT LPARENS RPARENS
    (18) function_declarator -> . IDENT LPARENS parameter_list RPARENS

    IDENT           shift and go to state 17

    declarator_list                shift and go to state 12
    declarator                     shift and go to state 13
    function_declarator            shift and go to state 16

state 12

    (8) declaration -> type declarator_list . SEMICOLON
    (12) declarator_list -> declarator_list . COMMA declarator

    SEMICOLON       shift and go to state 18
    COMMA           shift and go to state 19


state 13

    (11) declarator_list -> declarator .

    SEMICOLON       reduce using rule 11 (declarator_list -> declarator .)
    COMMA           reduce using rule 11 (declarator_list -> declarator .)


state 14

    (6) function_definition -> type function_declarator . decl_glbl_fct compound_instruction
    (16) declarator -> function_declarator .
    (7) decl_glbl_fct -> .

    SEMICOLON       reduce using rule 16 (declarator -> function_declarator .)
    COMMA           reduce using rule 16 (declarator -> function_declarator .)
    LBRACKET        reduce using rule 7 (decl_glbl_fct -> .)

    decl_glbl_fct                  shift and go to state 20

state 15

    (17) function_declarator -> IDENT . LPARENS RPARENS
    (18) function_declarator -> IDENT . LPARENS parameter_list RPARENS
    (15) declarator -> IDENT .

    LPARENS         shift and go to state 21
    SEMICOLON       reduce using rule 15 (declarator -> IDENT .)
    COMMA           reduce using rule 15 (declarator -> IDENT .)


state 16

    (16) declarator -> function_declarator .

    SEMICOLON       reduce using rule 16 (declarator -> function_declarator .)
    COMMA           reduce using rule 16 (declarator -> function_declarator .)


state 17

    (15) declarator -> IDENT .
    (17) function_declarator -> IDENT . LPARENS RPARENS
    (18) function_declarator -> IDENT . LPARENS parameter_list RPARENS

    SEMICOLON       reduce using rule 15 (declarator -> IDENT .)
    COMMA           reduce using rule 15 (declarator -> IDENT .)
    LPARENS         shift and go to state 21


state 18

    (8) declaration -> type declarator_list SEMICOLON .

    EXTERN          reduce using rule 8 (declaration -> type declarator_list SEMICOLON .)
    INT             reduce using rule 8 (declaration -> type declarator_list SEMICOLON .)
    STRING          reduce using rule 8 (declaration -> type declarator_list SEMICOLON .)
    $end            reduce using rule 8 (declaration -> type declarator_list SEMICOLON .)
    RBRACKET        reduce using rule 8 (declaration -> type declarator_list SEMICOLON .)
    SEMICOLON       reduce using rule 8 (declaration -> type declarator_list SEMICOLON .)
    WHILE           reduce using rule 8 (declaration -> type declarator_list SEMICOLON .)
    DO              reduce using rule 8 (declaration -> type declarator_list SEMICOLON .)
    FOR             reduce using rule 8 (declaration -> type declarator_list SEMICOLON .)
    RETURN          reduce using rule 8 (declaration -> type declarator_list SEMICOLON .)
    LBRACKET        reduce using rule 8 (declaration -> type declarator_list SEMICOLON .)
    IDENT           reduce using rule 8 (declaration -> type declarator_list SEMICOLON .)
    IF              reduce using rule 8 (declaration -> type declarator_list SEMICOLON .)
    SUBTRACT        reduce using rule 8 (declaration -> type declarator_list SEMICOLON .)
    CONST_INT       reduce using rule 8 (declaration -> type declarator_list SEMICOLON .)
    CONST_STRING    reduce using rule 8 (declaration -> type declarator_list SEMICOLON .)
    LPARENS         reduce using rule 8 (declaration -> type declarator_list SEMICOLON .)


state 19

    (12) declarator_list -> declarator_list COMMA . declarator
    (15) declarator -> . IDENT
    (16) declarator -> . function_declarator
    (17) function_declarator -> . IDENT LPARENS RPARENS
    (18) function_declarator -> . IDENT LPARENS parameter_list RPARENS

    IDENT           shift and go to state 17

    declarator                     shift and go to state 22
    function_declarator            shift and go to state 16

state 20

    (6) function_definition -> type function_declarator decl_glbl_fct . compound_instruction
    (31) compound_instruction -> . block_start declaration_list instruction_list block_end
    (32) compound_instruction -> . block_start declaration_list block_end
    (33) compound_instruction -> . block_start instruction_list block_end
    (34) compound_instruction -> . block_start block_end
    (35) block_start -> . LBRACKET

    LBRACKET        shift and go to state 24

    compound_instruction           shift and go to state 23
    block_start                    shift and go to state 25

state 21

    (17) function_declarator -> IDENT LPARENS . RPARENS
    (18) function_declarator -> IDENT LPARENS . parameter_list RPARENS
    (19) parameter_list -> . parameter_declaration
    (20) parameter_list -> . parameter_list COMMA parameter_declaration
    (21) parameter_declaration -> . type IDENT
    (9) type -> . INT
    (10) type -> . STRING

    RPARENS         shift and go to state 26
    INT             shift and go to state 1
    STRING          shift and go to state 2

    type                           shift and go to state 28
    parameter_declaration          shift and go to state 27
    parameter_list                 shift and go to state 29

state 22

    (12) declarator_list -> declarator_list COMMA declarator .

    SEMICOLON       reduce using rule 12 (declarator_list -> declarator_list COMMA declarator .)
    COMMA           reduce using rule 12 (declarator_list -> declarator_list COMMA declarator .)


state 23

    (6) function_definition -> type function_declarator decl_glbl_fct compound_instruction .

    EXTERN          reduce using rule 6 (function_definition -> type function_declarator decl_glbl_fct compound_instruction .)
    INT             reduce using rule 6 (function_definition -> type function_declarator decl_glbl_fct compound_instruction .)
    STRING          reduce using rule 6 (function_definition -> type function_declarator decl_glbl_fct compound_instruction .)
    $end            reduce using rule 6 (function_definition -> type function_declarator decl_glbl_fct compound_instruction .)


state 24

    (35) block_start -> LBRACKET .

    RBRACKET        reduce using rule 35 (block_start -> LBRACKET .)
    SEMICOLON       reduce using rule 35 (block_start -> LBRACKET .)
    INT             reduce using rule 35 (block_start -> LBRACKET .)
    STRING          reduce using rule 35 (block_start -> LBRACKET .)
    WHILE           reduce using rule 35 (block_start -> LBRACKET .)
    DO              reduce using rule 35 (block_start -> LBRACKET .)
    FOR             reduce using rule 35 (block_start -> LBRACKET .)
    RETURN          reduce using rule 35 (block_start -> LBRACKET .)
    LBRACKET        reduce using rule 35 (block_start -> LBRACKET .)
    IDENT           reduce using rule 35 (block_start -> LBRACKET .)
    IF              reduce using rule 35 (block_start -> LBRACKET .)
    SUBTRACT        reduce using rule 35 (block_start -> LBRACKET .)
    CONST_INT       reduce using rule 35 (block_start -> LBRACKET .)
    CONST_STRING    reduce using rule 35 (block_start -> LBRACKET .)
    LPARENS         reduce using rule 35 (block_start -> LBRACKET .)


state 25

    (31) compound_instruction -> block_start . declaration_list instruction_list block_end
    (32) compound_instruction -> block_start . declaration_list block_end
    (33) compound_instruction -> block_start . instruction_list block_end
    (34) compound_instruction -> block_start . block_end
    (13) declaration_list -> . declaration
    (14) declaration_list -> . declaration_list declaration
    (37) instruction_list -> . instruction
    (38) instruction_list -> . instruction_list instruction
    (36) block_end -> . RBRACKET
    (8) declaration -> . type declarator_list SEMICOLON
    (22) instruction -> . SEMICOLON
    (23) instruction -> . compound_instruction
    (24) instruction -> . expression_instruction
    (25) instruction -> . iteration_instruction
    (26) instruction -> . select_instruction
    (27) instruction -> . jump_instruction
    (9) type -> . INT
    (10) type -> . STRING
    (31) compound_instruction -> . block_start declaration_list instruction_list block_end
    (32) compound_instruction -> . block_start declaration_list block_end
    (33) compound_instruction -> . block_start instruction_list block_end
    (34) compound_instruction -> . block_start block_end
    (28) expression_instruction -> . expression SEMICOLON
    (29) expression_instruction -> . assignment SEMICOLON
    (42) iteration_instruction -> . WHILE LPARENS condition RPARENS instruction
    (43) iteration_instruction -> . DO instruction WHILE LPARENS condition RPARENS
    (44) iteration_instruction -> . FOR LPARENS assignment SEMICOLON condition SEMICOLON assignment RPARENS instruction
    (39) select_instruction -> . cond_instruction instruction
    (40) select_instruction -> . cond_instruction instruction ELSE instruction
    (45) jump_instruction -> . RETURN expression SEMICOLON
    (35) block_start -> . LBRACKET
    (53) expression -> . expression_additive
    (54) expression -> . expression SHIFTLEFT expression_additive
    (55) expression -> . expression SHIFTRIGHT expression_additive
    (30) assignment -> . IDENT ASSIGNMENT expression
    (41) cond_instruction -> . IF LPARENS condition RPARENS
    (56) expression_additive -> . expression_multiplicative
    (57) expression_additive -> . expression_additive ADD expression_multiplicative
    (58) expression_additive -> . expression_additive SUBTRACT expression_multiplicative
    (59) expression_multiplicative -> . unary_expression
    (60) expression_multiplicative -> . expression_multiplicative MULTIPLY unary_expression
    (61) expression_multiplicative -> . expression_multiplicative DIVIDE unary_expression
    (62) expression_multiplicative -> . expression_multiplicative MODULO unary_expression
    (63) unary_expression -> . postfix_expression
    (64) unary_expression -> . SUBTRACT unary_expression
    (65) postfix_expression -> . primary_expression
    (66) postfix_expression -> . IDENT LPARENS argument_expression_list RPARENS
    (67) postfix_expression -> . IDENT LPARENS RPARENS
    (70) primary_expression -> . IDENT
    (71) primary_expression -> . CONST_INT
    (72) primary_expression -> . CONST_STRING
    (73) primary_expression -> . LPARENS expression RPARENS

    RBRACKET        shift and go to state 51
    SEMICOLON       shift and go to state 55
    INT             shift and go to state 1
    STRING          shift and go to state 2
    WHILE           shift and go to state 38
    DO              shift and go to state 34
    FOR             shift and go to state 39
    RETURN          shift and go to state 36
    LBRACKET        shift and go to state 24
    IDENT           shift and go to state 43
    IF              shift and go to state 41
    SUBTRACT        shift and go to state 59
    CONST_INT       shift and go to state 52
    CONST_STRING    shift and go to state 33
    LPARENS         shift and go to state 42

    primary_expression             shift and go to state 30
    assignment                     shift and go to state 44
    instruction_list               shift and go to state 31
    jump_instruction               shift and go to state 45
    expression_instruction         shift and go to state 32
    instruction                    shift and go to state 53
    block_start                    shift and go to state 25
    compound_instruction           shift and go to state 35
    postfix_expression             shift and go to state 47
    select_instruction             shift and go to state 48
    expression_additive            shift and go to state 49
    expression                     shift and go to state 50
    type                           shift and go to state 11
    declaration_list               shift and go to state 46
    iteration_instruction          shift and go to state 54
    unary_expression               shift and go to state 37
    block_end                      shift and go to state 40
    cond_instruction               shift and go to state 56
    declaration                    shift and go to state 57
    expression_multiplicative      shift and go to state 58

state 26

    (17) function_declarator -> IDENT LPARENS RPARENS .

    SEMICOLON       reduce using rule 17 (function_declarator -> IDENT LPARENS RPARENS .)
    COMMA           reduce using rule 17 (function_declarator -> IDENT LPARENS RPARENS .)
    LBRACKET        reduce using rule 17 (function_declarator -> IDENT LPARENS RPARENS .)


state 27

    (19) parameter_list -> parameter_declaration .

    RPARENS         reduce using rule 19 (parameter_list -> parameter_declaration .)
    COMMA           reduce using rule 19 (parameter_list -> parameter_declaration .)


state 28

    (21) parameter_declaration -> type . IDENT

    IDENT           shift and go to state 60


state 29

    (18) function_declarator -> IDENT LPARENS parameter_list . RPARENS
    (20) parameter_list -> parameter_list . COMMA parameter_declaration

    RPARENS         shift and go to state 62
    COMMA           shift and go to state 61


state 30

    (65) postfix_expression -> primary_expression .

    MULTIPLY        reduce using rule 65 (postfix_expression -> primary_expression .)
    DIVIDE          reduce using rule 65 (postfix_expression -> primary_expression .)
    MODULO          reduce using rule 65 (postfix_expression -> primary_expression .)
    ADD             reduce using rule 65 (postfix_expression -> primary_expression .)
    SUBTRACT        reduce using rule 65 (postfix_expression -> primary_expression .)
    SEMICOLON       reduce using rule 65 (postfix_expression -> primary_expression .)
    SHIFTLEFT       reduce using rule 65 (postfix_expression -> primary_expression .)
    SHIFTRIGHT      reduce using rule 65 (postfix_expression -> primary_expression .)
    RPARENS         reduce using rule 65 (postfix_expression -> primary_expression .)
    EQUAL           reduce using rule 65 (postfix_expression -> primary_expression .)
    NOTEQUAL        reduce using rule 65 (postfix_expression -> primary_expression .)
    LESS            reduce using rule 65 (postfix_expression -> primary_expression .)
    GREATER         reduce using rule 65 (postfix_expression -> primary_expression .)
    LESSEQUAL       reduce using rule 65 (postfix_expression -> primary_expression .)
    GREATEREQUAL    reduce using rule 65 (postfix_expression -> primary_expression .)
    COMMA           reduce using rule 65 (postfix_expression -> primary_expression .)


state 31

    (33) compound_instruction -> block_start instruction_list . block_end
    (38) instruction_list -> instruction_list . instruction
    (36) block_end -> . RBRACKET
    (22) instruction -> . SEMICOLON
    (23) instruction -> . compound_instruction
    (24) instruction -> . expression_instruction
    (25) instruction -> . iteration_instruction
    (26) instruction -> . select_instruction
    (27) instruction -> . jump_instruction
    (31) compound_instruction -> . block_start declaration_list instruction_list block_end
    (32) compound_instruction -> . block_start declaration_list block_end
    (33) compound_instruction -> . block_start instruction_list block_end
    (34) compound_instruction -> . block_start block_end
    (28) expression_instruction -> . expression SEMICOLON
    (29) expression_instruction -> . assignment SEMICOLON
    (42) iteration_instruction -> . WHILE LPARENS condition RPARENS instruction
    (43) iteration_instruction -> . DO instruction WHILE LPARENS condition RPARENS
    (44) iteration_instruction -> . FOR LPARENS assignment SEMICOLON condition SEMICOLON assignment RPARENS instruction
    (39) select_instruction -> . cond_instruction instruction
    (40) select_instruction -> . cond_instruction instruction ELSE instruction
    (45) jump_instruction -> . RETURN expression SEMICOLON
    (35) block_start -> . LBRACKET
    (53) expression -> . expression_additive
    (54) expression -> . expression SHIFTLEFT expression_additive
    (55) expression -> . expression SHIFTRIGHT expression_additive
    (30) assignment -> . IDENT ASSIGNMENT expression
    (41) cond_instruction -> . IF LPARENS condition RPARENS
    (56) expression_additive -> . expression_multiplicative
    (57) expression_additive -> . expression_additive ADD expression_multiplicative
    (58) expression_additive -> . expression_additive SUBTRACT expression_multiplicative
    (59) expression_multiplicative -> . unary_expression
    (60) expression_multiplicative -> . expression_multiplicative MULTIPLY unary_expression
    (61) expression_multiplicative -> . expression_multiplicative DIVIDE unary_expression
    (62) expression_multiplicative -> . expression_multiplicative MODULO unary_expression
    (63) unary_expression -> . postfix_expression
    (64) unary_expression -> . SUBTRACT unary_expression
    (65) postfix_expression -> . primary_expression
    (66) postfix_expression -> . IDENT LPARENS argument_expression_list RPARENS
    (67) postfix_expression -> . IDENT LPARENS RPARENS
    (70) primary_expression -> . IDENT
    (71) primary_expression -> . CONST_INT
    (72) primary_expression -> . CONST_STRING
    (73) primary_expression -> . LPARENS expression RPARENS

    RBRACKET        shift and go to state 51
    SEMICOLON       shift and go to state 55
    WHILE           shift and go to state 38
    DO              shift and go to state 34
    FOR             shift and go to state 39
    RETURN          shift and go to state 36
    LBRACKET        shift and go to state 24
    IDENT           shift and go to state 43
    IF              shift and go to state 41
    SUBTRACT        shift and go to state 59
    CONST_INT       shift and go to state 52
    CONST_STRING    shift and go to state 33
    LPARENS         shift and go to state 42

    primary_expression             shift and go to state 30
    instruction                    shift and go to state 63
    iteration_instruction          shift and go to state 54
    unary_expression               shift and go to state 37
    jump_instruction               shift and go to state 45
    expression_instruction         shift and go to state 32
    expression_additive            shift and go to state 49
    block_start                    shift and go to state 25
    postfix_expression             shift and go to state 47
    block_end                      shift and go to state 64
    cond_instruction               shift and go to state 56
    assignment                     shift and go to state 44
    select_instruction             shift and go to state 48
    expression_multiplicative      shift and go to state 58
    compound_instruction           shift and go to state 35
    expression                     shift and go to state 50

state 32

    (24) instruction -> expression_instruction .

    RBRACKET        reduce using rule 24 (instruction -> expression_instruction .)
    SEMICOLON       reduce using rule 24 (instruction -> expression_instruction .)
    WHILE           reduce using rule 24 (instruction -> expression_instruction .)
    DO              reduce using rule 24 (instruction -> expression_instruction .)
    FOR             reduce using rule 24 (instruction -> expression_instruction .)
    RETURN          reduce using rule 24 (instruction -> expression_instruction .)
    LBRACKET        reduce using rule 24 (instruction -> expression_instruction .)
    IDENT           reduce using rule 24 (instruction -> expression_instruction .)
    IF              reduce using rule 24 (instruction -> expression_instruction .)
    SUBTRACT        reduce using rule 24 (instruction -> expression_instruction .)
    CONST_INT       reduce using rule 24 (instruction -> expression_instruction .)
    CONST_STRING    reduce using rule 24 (instruction -> expression_instruction .)
    LPARENS         reduce using rule 24 (instruction -> expression_instruction .)
    ELSE            reduce using rule 24 (instruction -> expression_instruction .)


state 33

    (72) primary_expression -> CONST_STRING .

    MULTIPLY        reduce using rule 72 (primary_expression -> CONST_STRING .)
    DIVIDE          reduce using rule 72 (primary_expression -> CONST_STRING .)
    MODULO          reduce using rule 72 (primary_expression -> CONST_STRING .)
    ADD             reduce using rule 72 (primary_expression -> CONST_STRING .)
    SUBTRACT        reduce using rule 72 (primary_expression -> CONST_STRING .)
    SEMICOLON       reduce using rule 72 (primary_expression -> CONST_STRING .)
    SHIFTLEFT       reduce using rule 72 (primary_expression -> CONST_STRING .)
    SHIFTRIGHT      reduce using rule 72 (primary_expression -> CONST_STRING .)
    RPARENS         reduce using rule 72 (primary_expression -> CONST_STRING .)
    COMMA           reduce using rule 72 (primary_expression -> CONST_STRING .)
    EQUAL           reduce using rule 72 (primary_expression -> CONST_STRING .)
    NOTEQUAL        reduce using rule 72 (primary_expression -> CONST_STRING .)
    LESS            reduce using rule 72 (primary_expression -> CONST_STRING .)
    GREATER         reduce using rule 72 (primary_expression -> CONST_STRING .)
    LESSEQUAL       reduce using rule 72 (primary_expression -> CONST_STRING .)
    GREATEREQUAL    reduce using rule 72 (primary_expression -> CONST_STRING .)


state 34

    (43) iteration_instruction -> DO . instruction WHILE LPARENS condition RPARENS
    (22) instruction -> . SEMICOLON
    (23) instruction -> . compound_instruction
    (24) instruction -> . expression_instruction
    (25) instruction -> . iteration_instruction
    (26) instruction -> . select_instruction
    (27) instruction -> . jump_instruction
    (31) compound_instruction -> . block_start declaration_list instruction_list block_end
    (32) compound_instruction -> . block_start declaration_list block_end
    (33) compound_instruction -> . block_start instruction_list block_end
    (34) compound_instruction -> . block_start block_end
    (28) expression_instruction -> . expression SEMICOLON
    (29) expression_instruction -> . assignment SEMICOLON
    (42) iteration_instruction -> . WHILE LPARENS condition RPARENS instruction
    (43) iteration_instruction -> . DO instruction WHILE LPARENS condition RPARENS
    (44) iteration_instruction -> . FOR LPARENS assignment SEMICOLON condition SEMICOLON assignment RPARENS instruction
    (39) select_instruction -> . cond_instruction instruction
    (40) select_instruction -> . cond_instruction instruction ELSE instruction
    (45) jump_instruction -> . RETURN expression SEMICOLON
    (35) block_start -> . LBRACKET
    (53) expression -> . expression_additive
    (54) expression -> . expression SHIFTLEFT expression_additive
    (55) expression -> . expression SHIFTRIGHT expression_additive
    (30) assignment -> . IDENT ASSIGNMENT expression
    (41) cond_instruction -> . IF LPARENS condition RPARENS
    (56) expression_additive -> . expression_multiplicative
    (57) expression_additive -> . expression_additive ADD expression_multiplicative
    (58) expression_additive -> . expression_additive SUBTRACT expression_multiplicative
    (59) expression_multiplicative -> . unary_expression
    (60) expression_multiplicative -> . expression_multiplicative MULTIPLY unary_expression
    (61) expression_multiplicative -> . expression_multiplicative DIVIDE unary_expression
    (62) expression_multiplicative -> . expression_multiplicative MODULO unary_expression
    (63) unary_expression -> . postfix_expression
    (64) unary_expression -> . SUBTRACT unary_expression
    (65) postfix_expression -> . primary_expression
    (66) postfix_expression -> . IDENT LPARENS argument_expression_list RPARENS
    (67) postfix_expression -> . IDENT LPARENS RPARENS
    (70) primary_expression -> . IDENT
    (71) primary_expression -> . CONST_INT
    (72) primary_expression -> . CONST_STRING
    (73) primary_expression -> . LPARENS expression RPARENS

    SEMICOLON       shift and go to state 55
    WHILE           shift and go to state 38
    DO              shift and go to state 34
    FOR             shift and go to state 39
    RETURN          shift and go to state 36
    LBRACKET        shift and go to state 24
    IDENT           shift and go to state 43
    IF              shift and go to state 41
    SUBTRACT        shift and go to state 59
    CONST_INT       shift and go to state 52
    CONST_STRING    shift and go to state 33
    LPARENS         shift and go to state 42

    primary_expression             shift and go to state 30
    instruction                    shift and go to state 65
    iteration_instruction          shift and go to state 54
    unary_expression               shift and go to state 37
    jump_instruction               shift and go to state 45
    expression_instruction         shift and go to state 32
    expression_additive            shift and go to state 49
    block_start                    shift and go to state 25
    postfix_expression             shift and go to state 47
    cond_instruction               shift and go to state 56
    assignment                     shift and go to state 44
    select_instruction             shift and go to state 48
    expression_multiplicative      shift and go to state 58
    compound_instruction           shift and go to state 35
    expression                     shift and go to state 50

state 35

    (23) instruction -> compound_instruction .

    RBRACKET        reduce using rule 23 (instruction -> compound_instruction .)
    SEMICOLON       reduce using rule 23 (instruction -> compound_instruction .)
    WHILE           reduce using rule 23 (instruction -> compound_instruction .)
    DO              reduce using rule 23 (instruction -> compound_instruction .)
    FOR             reduce using rule 23 (instruction -> compound_instruction .)
    RETURN          reduce using rule 23 (instruction -> compound_instruction .)
    LBRACKET        reduce using rule 23 (instruction -> compound_instruction .)
    IDENT           reduce using rule 23 (instruction -> compound_instruction .)
    IF              reduce using rule 23 (instruction -> compound_instruction .)
    SUBTRACT        reduce using rule 23 (instruction -> compound_instruction .)
    CONST_INT       reduce using rule 23 (instruction -> compound_instruction .)
    CONST_STRING    reduce using rule 23 (instruction -> compound_instruction .)
    LPARENS         reduce using rule 23 (instruction -> compound_instruction .)
    ELSE            reduce using rule 23 (instruction -> compound_instruction .)


state 36
